<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="#04b4db"
    tools:context="com.example.henry_light.login.MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/titleNewProfile"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:background="#069dfd"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="#ffffff">
        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/studentId" />

        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/firstName"/>

        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/lastName"/>

        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/emailAddress"/>

        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/password"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

    </LinearLayout>

    <Button
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="Create Profile"
        android:id="@+id/createButton"
        android:onClick="onclickSignIn"
        android:singleLine="false"
        android:backgroundTint="#066dfd"
        android:textColor="#ffffff" />

</LinearLayout>