<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="20dp"
    android:background="#04b4db"
    tools:context="com.example.henry_light.login.MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="#069dfd"
        android:text="@string/skillLevel"
        android:textSize="25sp"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start|top"
        android:padding="20dp"
        android:background="#ffffff">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beginner"
            android:id="@+id/checkBox1"
            android:padding="5dp"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/someExperience"
            android:id="@+id/checkBox2"
            android:padding="5dp"

            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intermediate"
            android:id="@+id/checkBox3"
            android:padding="5dp"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experienced"
            android:id="@+id/checkBox4"
            android:padding="5dp"
            android:textSize="20sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master"
            android:id="@+id/checkBox5"
            android:padding="5dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:onClick="onContinueClick"
        android:backgroundTint="#066dfd"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</LinearLayout>